--- a/css/custom.css
+++ b/css/custom.css
@@ -57,6 +57,14 @@ a:hover { color: white; }
 	display: block;
 }
 
+.week-section:hover,.week-section-sub2:hover {
+	cursor:pointer;
+}
+
+.week-section .collapse {
+	cursor:initial;
+}
+
 .week-section-title {
 	font-size:25px;
 	color: #42c4df;
@@ -90,6 +98,14 @@ a:hover { color: white; }
 	margin: 10px;
 }
 
+.not-clicked {
+	background:url('../images/original-checkbox_empty.png') no-repeat center;
+}
+
+.is-clicked {
+	background:url('../images/original-checkbox_filled.png') no-repeat center;
+}
+
 .week-section-item {
 	background-color: #f142a8;
 	border-radius: 25px;
@@ -101,7 +117,7 @@ a:hover { color: white; }
 }
 
 
-.week-1-a img {
+#week-1-a img {
 	height: 180px;
 	width: 180px;
 	background-color: black;
@@ -111,22 +127,22 @@ a:hover { color: white; }
 	margin-left: 10px;
 }
 
-.week-1-e img {
+#week-1-e img {
 	float: right;
 	width: 40px;
 	height: auto;
 }
 
-.week-2-a img {
+#week-2-a img {
 	height: 180px;
 	width: 180px;
 	margin-left: 10px;
 	float: right;
 }
 
-.week-2-c img { float: right; }
+#week-2-c img { float: right; }
 
-.week-3-b img {
+#week-3-b img {
 	float: right;
 	width: 100px;
 	height: auto;
